# mi-hands

./: .coverage  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  mcp-manifest.json  pyproject.toml  requirements.txt  setup.py  start-mcp-v2.bat  start-mcp-v3.bat  start-mcp.bat
.claude/: plan.md
.github/workflows/: ci.yml  publish.yml
app_guides/: 360album.yaml  360clean.yaml  360safe.yaml  WidevineCdm.yaml  calculator.yaml  cascadeur.yaml  chrome.yaml  clash.yaml  cmd.yaml  codex.yaml  control_panel.yaml  device_manager.yaml  disk_management.yaml  douyin.yaml  edge.yaml  epic_launcher.yaml  event_viewer.yaml  explorer.yaml  gigabyte.yaml  git.yaml  group_policy.yaml  imagemagick.yaml  intel.yaml  ivcam.yaml  jetbrains.yaml  jianying.yaml  jietu.yaml  kingsoft.yaml  krita.yaml  league.yaml  lenovo.yaml  nodejs.yaml  notepad.yaml  nvidia.yaml  obs.yaml  obsidian.yaml  onedrive.yaml  performance_monitor.yaml  potplayer.yaml  powershell.yaml  (+100 more)
config/: mimo_config.yaml
core/: __init__.py  __main__.py  event_system.py  interfaces.py  plugin_manager.py
docs/: 2026-06-05-mi-hands-design.md
docs/superpowers/plans/: 2026-06-08-architecture-merge.md
docs/superpowers/specs/: 2026-06-08-architecture-merge-design.md
mi_hands.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plugins/: __init__.py
plugins/github_sync/: __init__.py  plugin.py
plugins/gui/: __init__.py  guide_manager_window.py  learning_status_window.py  main_window.py  plugin.py
plugins/guide_manager/: __init__.py  learner.py  local_scanner.py  models.py  plugin.py
plugins/mouse_manager/: __init__.py  plugin.py
plugins/server/: __init__.py  plugin.py
plugins/wait/: __init__.py  plugin.py
scripts/: migrate_state_to_sqlite.py
src/: __init__.py  __main__.py  mimo_client.py  optimizer.py  server.py  tools.py  uia_engine.py  vision_engine.py
src/v3/: __init__.py
src/v3/core/: __init__.py  action_models.py  advanced_engines.py  app_agent.py  context_awareness.py  continuous_awareness.py  dynamic_orchestrator.py  entity_operations.py  execution_engines.py  experience_manager.py  file_ops.py  host_agent.py  learning_loop.py  memory.py  metrics.py  physical_hid.py  reflection.py  retry_utils.py  script_executor.py  security.py  skill_manager.py  smart_verify.py  state_manager.py  verify.py
src/v3/mcp/: __init__.py  plugin.py
state/: mi_hands.db
tests/: test_verify.py
tests/e2e/: test_notepad.py
tests/integration/: test_full_system.py  test_plugin_interaction.py
tests/unit/: test_app_agent.py  test_calculator_guide.py  test_event_system.py  test_github_sync.py  test_gui.py  test_guide_manager.py  test_guide_models.py  test_host_agent.py  test_interfaces.py  test_learner.py  test_local_scanner.py  test_mouse_manager.py  test_notepad_guide.py  test_plugin.py  test_plugin_manager.py  test_self_evolution.py  test_wait.py
